--- a/UTOPIA-milestone3.html
+++ b/UTOPIA-milestone3.html
@@ -8,6 +8,8 @@
     <title>utopia-homepage</title>
   </head>
   <body>
+    <div class = "main"> </div>
+    <div class = "right"> </div>
     <div class="background">
       <container class="header">
         <h1>utopia.</h1>
